# Euler

./: .gitignore  README.md  pyproject.toml
jl/: problem_1.jl  problem_2.jl  problem_3.jl  problem_4.jl
py/: Integer.py  NumberWriter.py  PrimeNumberManager.py  problem_1.py  problem_10.py  problem_11.py  problem_12.py  problem_13.py  problem_14.py  problem_15.py  problem_16.py  problem_17.py  problem_18.py  problem_2.py  problem_3.py  problem_4.py  problem_5.py  problem_6.py  problem_7.py  problem_8.py  problem_9.py  utils.py
