[tool.poetry]
name = "euler"
version = "0.1.0"
description = "A to do list manager written in python"
authors = ["Thomas Delaney <thomas.delaney@posteo.net>"]
license = "GNU Licence, I suppose"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typing_extensions = "*"
tomli = "*"
black = "*"
isort = "*"
numpy = "*"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
